8253375: OSX build fails with Xcode 12.0 (12A7209) Summary: Replace double array with short array in AdapterHandlerLibrary::create_native_wrapper Reviewed-by: prr, kbarrett, lucy